# pre_commit_hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: detect_tab.py
