[metadata]
name = detect_tab 
version = 0.1.0 
description = detect tab indentation 
author = Stefan Deml 
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    ruamel.yaml>=0.15
    six
    typing; python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    detect_tab = pre_commit_hooks.detect_tab:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True